--- a/index.html
+++ b/index.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
-<html lang="'en">
+<html lang="en">
 <head>
-        <meta charset="'UTF-8">
-        <link rel="'stylesheet" href="style.css">
-        <title>♡Valentine Letter♡</title>
-        <meta name="'viewport" content="'width=device-width, initial-scale=1.0'>
-        <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>♡ Valentine Letter ♡</title>
 </head>
 <body>
-    Envelope Screen 
-    <div id="envelope-container">
-        <img scr="envelope.jpg" alt="Envelope" id="'envelope" />
-        <p>A Letter for Celina!!!</p>
+  <!-- Envelope Screen -->
+  <div id="envelope-container" aria-label="Open the envelope">
+    <img src="envelope.png" alt="Envelope" id="envelope" />
+    <p class="envelope-title">A Letter for Celina!!!</p>
+    <p class="envelope-sub">(click the envelope)</p>
+  </div>
+
+  <!-- Letter Screen -->
+  <div id="letter-container" aria-hidden="true">
+    <div class="letter-window">
+      <h1 id="letter-title">We would be the perfect match(a)! Will you be my Valentine?</h1>
+
+      <div class="art-row">
+        <img src="cat_heart.gif" class="cat" id="letter-cat" alt="Cat" />
+        <img src="matcha.jpg" alt="Matcha" class="matcha" />
+      </div>
+
+      <div class="buttons" id="letter-buttons">
+        <img src="yes.png" class="btn yes-btn" alt="Yes" />
+        <img src="no.png" class="btn no-btn" alt="No" />
+      </div>
+
+      <p id="final-text" class="final-text" hidden>
+        <strong>Molly Tea? Matcha Matcha? Project Seoul?</strong>
+      </p>
     </div>
+  </div>
 
-    Letter Screen
-    <div id="'letter-container">
-        <div class = "letter-window"
-            <h1 id = "letter-title"> We would be the perfect match(a)! Will you be my Valentine?</h1>
-
-        <img src="cat_heart.gif" class="'cat" id="'letter-cat" />
-         <img src="matcha.jpg" alt="Matcha" class="matcha" />
-
-        <div class="buttons" id="letter-buttons">
-            <img src=""yes.png" class="btn yes-btn" alt="Yes" />
-
-            <div class="no-wrapper">
-                <img src=""no.png" class="btn no-btn" alt="No" />
-            </div>
-        </div>
-
-        <p id="final-text" class="final-text" style="display: none">
-            <strong>Molly Tea? Matcha Matcha? Project Seoul?</strong></p>
-
-    </div>
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
