--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div class="art-row">
         <img src="cat_heart.gif" class="cat" id="letter-cat" alt="Cat" />
-        <img src="matcha.jpg" alt="Matcha" class="matcha" />
+        <img src="matcha.gif" alt="Matcha" class="matcha" />
       </div>
 
       <div class="buttons" id="letter-buttons">
